# exchange-rate-service

./: .gitignore  Dockerfile  README.md  architecture.md  pyproject.toml
.github/workflows/: deploy.yml  lint.yml  tests.yml
app/: main.py
app/api/: ingest.py
app/core/: .env.example  config.py  errors.py  logger.py
app/database/: bigquery.py  queries.py
app/external_clients/: open_exchange.py
app/services/: ingest_service.py  ingress_service.py
tests/test_database/: test_bigquery.py
tests/test_external_clients/: test_open_exchange.py
tests/test_services/: test_ingest_service.py  test_ingress_service.py
